--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "formik": "^2.4.5",
+    "mapbox-gl": "^2.15.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
